# ExamQuestions

./: .gitignore  README.md
01a Data parsing servers - Part I/DataFormatApi/: DataFormatApi.csproj
01a Data parsing servers - Part I/FileBonanzaPython/: main.py
01a-03a Data parsing servers/FileBonanzaPython/: main.py
03b Database granular access/: Granular MSSQL database dokumentation.docx  ~$anular MSSQL database dokumentation.docx
04a SSE Example/: main.py  pyproject.toml
04a SSE Example/public/: index.html
04b Database granular access/: README.txt
05a Webhooks/cs-exposee/: cs-exposee.sln
05a Webhooks/python-exposee/: pyproject.toml
05a/python-exposee/: main.py
08a Document A Database/: README.md
08b Migrate from One Database to Another/: ClassicmodelsContext.cs  Customer.cs  DatabaseMigration.csproj  DatabaseMigration.sln  Employee.cs  MSSQLContext.cs  Office.cs  Order.cs  Orderdetail.cs  Payment.cs  Product.cs  Productline.cs
08b Migrate from One Database to Another/MigrateData/: DataMigrater.cs
08b Migrate from One Database to Another/Migrations/: 20240418190027_initSqlServer.Designer.cs  20240418190027_initSqlServer.cs  20240418191200_InitialCreate.Designer.cs  20240418191200_InitialCreate.cs  20240418191418_InitialCreate2.Designer.cs  20240418191418_InitialCreate2.cs  20240418191909_InitialCreate.Designer.cs  20240418192236_InitialCreate.Designer.cs  20240418192417_InitialCreate.Designer.cs  MSSQLContextModelSnapshot.cs  (+2 more)
10a GraphQL/: package-lock.json  package.json
10b Integrate With Payment/: package-lock.json  package.json  server.js
(+18 files in other folders)
