[tool.poetry]
name = "04a sse example"
version = "0.1.0"
description = ""
authors = ["Bressendorff <95355589+Bressendorff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
