[tool.poetry]
name = "python-exposee"
version = "0.1.0"
description = ""
authors = ["Bressendorff <95355589+Bressendorff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
